--- a/src/gospelcenter/CenterBundle/Resources/views/AdminMember/list.html.twig
+++ b/src/gospelcenter/CenterBundle/Resources/views/AdminMember/list.html.twig
@@ -15,7 +15,7 @@
                 <tr>
                     <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.person.firstname }}</a></td>
                     <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.person.lastname }}</a></td>
-                    <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.person.title }}</a></td>
+                    <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.person.gender }}</a></td>
                     <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.memberFromDate|date('d F Y') }}</a></td>
                 </tr>
             {% else %}
