--- a/src/gospelcenter/PageBundle/Resources/views/AdminPage/list.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPage/list.html.twig
@@ -24,7 +24,7 @@
                 <tr>
                     <td><a href="{{ path('gospelcenterAdmin_pages_edit', {'page': page.id, 'center': center.ref}) }}">{{ page.title }}</a></td>
                     <td><a href="{{ path('gospelcenterAdmin_pages_edit', {'page': page.id, 'center': center.ref}) }}">{{ page.ref }}</a></td>
-                    <td><a href="{{ path('gospelcenterAdmin_pages_edit', {'page': page.id, 'center': center.ref}) }}">{{ page.language.value }}</a></td>
+                    <td><a href="{{ path('gospelcenterAdmin_pages_edit', {'page': page.id, 'center': center.ref}) }}">{{ page.language.ref }}</a></td>
                 </tr>
             {% else %}
                 <tr><td colspan="3">There are no pages.</td></tr>
