--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPersonGlobal/add.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPersonGlobal/add.html.twig
@@ -32,7 +32,7 @@
         </fieldset>
         
         <fieldset class="header">
-            {{ form_widget(form.title, {'attr': {'placeholder': 'Title'}, 'autofocus': true}) }}
+            {{ form_widget(form.gender, {'attr': {'placeholder': 'Gender'}, 'autofocus': true}) }}
             {{ form_widget(form.firstname, {'attr': {'placeholder': 'Firstname', 'class': 'resize'} }) }}
             {{ form_widget(form.lastname, {'attr': {'placeholder': 'Lastname', 'class': 'resize'} }) }}
         </fieldset>
