--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminMobile/edit.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminMobile/edit.html.twig
@@ -19,9 +19,12 @@
         {{ form_errors(form) }}
         
         <fieldset class="block">
-            {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
             {{ form_widget(form.firstname, {'attr': {'placeholder': 'Firstname'} }) }}
             {{ form_widget(form.lastname, {'attr': {'placeholder': 'Lastname'} }) }}
+        </fieldset>
+        
+        <fieldset class="block">
+            {{ form_widget(form.gender, {'attr': {'data-icon': 'gender'} }) }}
         </fieldset>
         
         <fieldset class="block">
