--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/add.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/add.html.twig
@@ -32,9 +32,9 @@
         </fieldset>
         
         <fieldset class="header">
-            {{ form_widget(form.title, {'attr': {'placeholder': 'Title'}, 'autofocus': true}) }}
-            {{ form_widget(form.firstname, {'attr': {'placeholder': 'Firstname', 'class': 'resize'} }) }}
+            {{ form_widget(form.firstname, {'attr': {'placeholder': 'Firstname', 'class': 'resize', 'autofocus': true} }) }}
             {{ form_widget(form.lastname, {'attr': {'placeholder': 'Lastname', 'class': 'resize'} }) }}
+            {{ form_widget(form.gender, {'attr': {'placeholder': 'Gender', 'data-icon': 'gender'} }) }}
         </fieldset>
         
         <fieldset class="phone">
