--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/edit.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/edit.html.twig
@@ -3,7 +3,13 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript" src="{{ asset('js/addCelebration-min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('js/addImage-min.js') }}"></script>
+    
+    {% if celebration.image %}
+        <script type="text/javascript" src="{{ asset('js/editImage-min.js') }}"></script>
+    {% else %}
+        <script type="text/javascript" src="{{ asset('js/addImage-min.js') }}"></script>
+    {% endif %}
+    
 {% endblock %}
 
 {% block stylesheets %}
@@ -42,10 +48,12 @@
                 
                 <fieldset class="column image">
                     <h2>Image</h2>
-                    {% if form.image.vars.value %}
-                        <img src="{{ asset(form.image.vars.value.webPath)}}" alt="{{ form.image.vars.value.alt }}" data-image="{{ form.image.vars.id }}" />
-                    {% endif %}
                     {{ form_widget(form.image.file) }}
+                    {% if celebration.image %}
+                    	<div id="editImage" data-input="{{ form.image.file.vars.id }}">
+                    	    <img src="{{ asset(celebration.image.webPath) }}" alt="{{ celebration.image.alt }}" />
+                    	</div>
+                    {% endif %}
                 </fieldset>
             </fieldset>
             
