--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
@@ -3,6 +3,13 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript" src="{{ asset('js/form-min.js') }}"></script>
+    
+    {% if person.image %}
+        <script type="text/javascript" src="{{ asset('js/editImage-min.js') }}"></script>
+    {% else %}
+        <script type="text/javascript" src="{{ asset('js/addImage-min.js') }}"></script>
+    {% endif %}
+    
 {% endblock %}
 
 {% block stylesheets %}
@@ -27,11 +34,11 @@
     	{{ form_errors(form) }}
         
         <fieldset class="image">
+            {{ form_widget(form.image.file) }}
             {% if person.image %}
-                <img src="{{ asset(person.image.webPath) }}" alt="{{ person.image.alt }}" />
-                {{ form_widget(form.image.file) }}
-            {% else %}
-                {{ form_widget(form.image.file) }}
+            	<div id="editImage" data-input="{{ form.image.file.vars.id }}">
+            	    <img src="{{ asset(person.image.webPath) }}" alt="{{ person.image.alt }}" />
+            	</div>
             {% endif %}
         </fieldset>
         
